# telegram-media-downloader-bot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _build.sh  downloader-bot.sln
TelegramBotAPI/: Bot.cpp  CMakeLists.txt  TelegramBotAPI.vcxproj  TelegramBotAPI.vcxproj.filters
TelegramBotAPI/Internal/Utility/: QHttpMultiPartInserter.cpp  QHttpMultiPartInserter.h  QHttpMultiPartInserter.hpp  QJsonArrayInserter.h  QJsonArrayInserter.hpp  QJsonObjectInserter.h  QJsonObjectInserter.hpp
TelegramBotAPI/Types/: BotCommandScope.h  Chat.h  ChatMember.h  InlineQueryResult.h  InputMedia.h  InputMediaPhoto.cpp  InputMediaPhoto.h  InputMediaVideo.cpp  InputMediaVideo.h  MaskPosition.h  Message.h  MessageEntity.h  Poll.h
docker/: Dockerfile
docker/synology/: readme.txt
docker/windows/: create_bot_shared_volume.bat  rebuild_image.bat
downloader-bot/: CMakeLists.txt  bot.cpp  bot.h  bot_config.cpp  bot_config.h  bot_logger.cpp  bot_logger.h  bot_status.cpp  bot_status.h  bot_version.h  download_info.h  downloader-bot.vcxproj  downloader-bot.vcxproj.filters  ffmpeg.cpp  ffmpeg.h  gallery_downloader.cpp  gallery_downloader.h  helpers.cpp  helpers.h  main.cpp  pch.h  spdlog_qt.h  stream_info.cpp  stream_info.h  video_downloader.cpp  video_downloader.h  video_info.cpp  video_info.h  video_info_parser.cpp  video_info_parser.h
