cmake_minimum_required(VERSION 3.20.0)

project(TelegramBotAPI
        VERSION 1.0.0
        LANGUAGES CXX
        DESCRIPTION "Telegram Bot API on C++ and Qt6")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)

find_package(Qt6 REQUIRED COMPONENTS Core Network)

add_library(${PROJECT_NAME})
target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Core PRIVATE Qt6::Network)

include_directories(.)

target_sources(${PROJECT_NAME} PRIVATE TelegramBotAPI.h Bot.cpp Bot.h BotSettings.cpp BotSettings.h

        ##### Types
        
        Types/Animation.cpp
        Types/Animation.h
        Types/Audio.cpp
        Types/Audio.h
        Types/BotCommand.cpp
        Types/BotCommand.h
        Types/BotCommandScope.h
        Types/BotCommandScopeAllChatAdministrators.h
        Types/BotCommandScopeAllGroupChats.h
        Types/BotCommandScopeAllPrivateChats.h
        Types/BotCommandScopeChat.cpp
        Types/BotCommandScopeChat.h
        Types/BotCommandScopeChatAdministrators.cpp
        Types/BotCommandScopeChatAdministrators.h
        Types/BotCommandScopeChatMember.cpp
        Types/BotCommandScopeChatMember.h
        Types/BotCommandScopeDefault.h
        Types/CallbackQuery.cpp
        Types/CallbackQuery.h
        Types/Chat.cpp
        Types/Chat.h
        Types/ChatInviteLink.cpp
        Types/ChatInviteLink.h
        Types/ChatLocation.cpp
        Types/ChatLocation.h
        Types/ChatMember.h
        Types/ChatMemberAdministrator.cpp 
        Types/ChatMemberAdministrator.h
        Types/ChatMemberBanned.cpp        
        Types/ChatMemberBanned.h       
        Types/ChatMemberLeft.cpp          
        Types/ChatMemberLeft.h         
        Types/ChatMemberMember.cpp        
        Types/ChatMemberMember.h       
        Types/ChatMemberOwner.cpp         
        Types/ChatMemberOwner.h        
        Types/ChatMemberRestricted.cpp    
        Types/ChatMemberRestricted.h 
        Types/ChatMemberUpdated.cpp
        Types/ChatMemberUpdated.h
        Types/ChatPermissions.cpp
        Types/ChatPermissions.h
        Types/ChatPhoto.cpp
        Types/ChatPhoto.h
        Types/ChosenInlineResult.cpp
        Types/ChosenInlineResult.h
        Types/Contact.cpp
        Types/Contact.h
        Types/Dice.cpp
        Types/Dice.h
        Types/Document.cpp
        Types/Document.h
        Types/Error.cpp
        Types/Error.h
        Types/File.cpp
        Types/File.h
        Types/ForceReply.cpp
        Types/ForceReply.h
        Types/InlineKeyboardButton.cpp
        Types/InlineKeyboardButton.h
        Types/InlineKeyboardMarkup.cpp
        Types/InlineKeyboardMarkup.h
        Types/InlineQuery.cpp
        Types/InlineQuery.h
        Types/InlineQueryResult.h
        Types/InlineQueryResultArticle.cpp
        Types/InlineQueryResultArticle.h
        Types/InlineQueryResultAudio.cpp
        Types/InlineQueryResultAudio.h
        Types/InlineQueryResultCachedAudio.cpp
        Types/InlineQueryResultCachedAudio.h
        Types/InlineQueryResultCachedDocument.cpp
        Types/InlineQueryResultCachedDocument.h
        Types/InlineQueryResultCachedGif.cpp
        Types/InlineQueryResultCachedGif.h
        Types/InlineQueryResultCachedMpeg4Gif.cpp
        Types/InlineQueryResultCachedMpeg4Gif.h
        Types/InlineQueryResultCachedPhoto.cpp
        Types/InlineQueryResultCachedPhoto.h
        Types/InlineQueryResultCachedSticker.cpp
        Types/InlineQueryResultCachedSticker.h
        Types/InlineQueryResultCachedVideo.cpp
        Types/InlineQueryResultCachedVideo.h
        Types/InlineQueryResultCachedVoice.cpp
        Types/InlineQueryResultCachedVoice.h
        Types/InlineQueryResultContact.cpp
        Types/InlineQueryResultContact.h
        Types/InlineQueryResultDocument.cpp
        Types/InlineQueryResultDocument.h
        Types/InlineQueryResultGame.cpp
        Types/InlineQueryResultGame.h
        Types/InlineQueryResultGif.cpp
        Types/InlineQueryResultGif.h
        Types/InlineQueryResultLocation.cpp
        Types/InlineQueryResultLocation.h
        Types/InlineQueryResultMpeg4Gif.cpp
        Types/InlineQueryResultMpeg4Gif.h
        Types/InlineQueryResultPhoto.cpp
        Types/InlineQueryResultPhoto.h
        Types/InlineQueryResultVenue.cpp
        Types/InlineQueryResultVenue.h
        Types/InlineQueryResultVideo.cpp
        Types/InlineQueryResultVideo.h
        Types/InlineQueryResultVoice.cpp
        Types/InlineQueryResultVoice.h
        Types/InputContactMessageContent.cpp
        Types/InputContactMessageContent.h
        Types/InputInvoiceMessageContent.cpp
        Types/InputInvoiceMessageContent.h
        Types/InputLocationMessageContent.cpp
        Types/InputLocationMessageContent.h
        Types/InputMedia.h
        Types/InputMediaAnimation.cpp
        Types/InputMediaAnimation.h
        Types/InputMediaAudio.cpp
        Types/InputMediaAudio.h
        Types/InputMediaDocument.cpp
        Types/InputMediaDocument.h
        Types/InputMediaPhoto.cpp
        Types/InputMediaPhoto.h
        Types/InputMediaVideo.cpp
        Types/InputMediaVideo.h    
        Types/InputMessageContent.h
        Types/InputTextMessageContent.cpp  
        Types/InputTextMessageContent.h
        Types/InputVenueMessageContent.cpp 
        Types/InputVenueMessageContent.h
        Types/KeyboardButton.cpp
        Types/KeyboardButton.h
        Types/KeyboardButtonPollType.cpp
        Types/KeyboardButtonPollType.h
        Types/Location.cpp
        Types/Location.h
        Types/LoginURL.cpp
        Types/LoginURL.h
        Types/MaskPosition.cpp
        Types/MaskPosition.h
        Types/Message.cpp
        Types/Message.h
        Types/MessageAutoDeleteTimerChanged.cpp
        Types/MessageAutoDeleteTimerChanged.h
        Types/MessageEntity.cpp
        Types/MessageEntity.h
        Types/MessageId.cpp
        Types/MessageId.h
        Types/PhotoSize.cpp
        Types/PhotoSize.h
        Types/Poll.cpp
        Types/Poll.h
        Types/PollAnswer.cpp
        Types/PollAnswer.h
        Types/PollOption.cpp
        Types/PollOption.h
        Types/ProximityAlertTriggered.cpp
        Types/ProximityAlertTriggered.h
        Types/ReplyKeyboardMarkup.cpp
        Types/ReplyKeyboardMarkup.h
        Types/ReplyKeyboardRemove.cpp
        Types/ReplyKeyboardRemove.h
        Types/ResponseParameters.cpp
        Types/ResponseParameters.h
        Types/Sticker.cpp
        Types/Sticker.h
        Types/StickerSet.cpp
        Types/StickerSet.h
        Types/Update.cpp
        Types/Update.h
        Types/User.cpp
        Types/User.h
        Types/UserProfilePhotos.cpp
        Types/UserProfilePhotos.h
        Types/Venue.cpp
        Types/Venue.h
        Types/Video.cpp
        Types/Video.h
        Types/VideoNote.cpp
        Types/VideoNote.h
        Types/Voice.cpp
        Types/Voice.h
        Types/VoiceChatEnded.cpp
        Types/VoiceChatEnded.h
        Types/VoiceChatParticipantsInvited.cpp
        Types/VoiceChatParticipantsInvited.h
        Types/VoiceChatScheduled.cpp
        Types/VoiceChatScheduled.h
        Types/VoiceChatStarted.cpp
        Types/VoiceChatStarted.h
        Types/WebhookInfo.cpp
        Types/WebhookInfo.h

        ##### Internal
        Internal/TelegramListener.cpp
        Internal/TelegramListener.h
        Internal/Utility/Utility.h
        Internal/Utility/Utility.cpp
        Internal/Utility/QHttpMultiPartInserter.cpp
        Internal/Utility/QHttpMultiPartInserter.h
        Internal/Utility/QHttpMultiPartInserter.hpp
        Internal/Utility/QJsonObjectInserter.cpp
        Internal/Utility/QJsonObjectInserter.h
        Internal/Utility/QJsonObjectInserter.hpp
        Internal/Utility/QJsonArrayInserter.cpp
        Internal/Utility/QJsonArrayInserter.h
        Internal/Utility/QJsonArrayInserter.hpp
        Internal/Utility/QVectorInserter.h
        Internal/Utility/QVectorInserter.hpp

        )
